lcs-pma (2.1-2~1) UNRELEASED; urgency=low

  * upgrade phpmyadmin in version 3.1.4
  
 -- Philippe Leclerc <philippe.leclerc1@ac-caen.fr>  Thu, 30 Apr 2009 11:54:46 +0200

lcs-pma (2.1-1) LcsXP; urgency=low

  * change number version in postinst

 -- Philippe Leclerc <philippe.leclerc1@ac-caen.fr>  Tue, 28 Apr 2009 13:23:04 +0200

lcs-pma (2.1) LcsXP; urgency=low

  * remove tilde to release

 -- Philippe Leclerc <philippe.leclerc1@ac-caen.fr>  Tue, 28 Apr 2009 11:39:39 +0200

lcs-pma (2.1~6) LcsXP; urgency=low

  * Update documentation html
  * Change version number in control, postinst and README files

 -- Philippe Leclerc <philippe.leclerc1@ac-caen.fr>  Wed,  4 Mar 2009 15:56:34 +0100

lcs-pma (2.1~5) UNRELEASED; urgency=low

  * Initial release.
  * base sur PhpMyAdmin 3.1.2

 -- Philippe Leclerc <philippe.leclerc1@ac-caen.fr>  Fri, 27 Feb 2009 15:51:08 +0100