@@ -1,0 +1,28 @@
+#! /bin/sh
+# preinst script for lcs-pma
+
+set -e
+case "$1" in
+install)
+
+;;
+abort-upgrade)
+;;
+upgrade)
+	#
+        # correction bug de postrm des versions precedentes
+        #
+	if [  "$2" = "2.1~5" ] || [  "$2" = "2.1~6" ] || [ "$2" = "2.1-1" ] ; then
+	sed -i "s/purge|remove|upgrade|failed-upgrade|abort-install|abort-upgrade|disappear)/purge|remove)/g" /var/lib/dpkg/info/lcs-pma.postrm
+        sed -i "/*)/i\ upgrade|failed-upgrade|abort-install|abort-upgrade|disappear)\n ;;" /var/lib/dpkg/info/lcs-pma.postrm
+	fi
+;;
+*)
+echo "preinst called with unknown argument \`$1'" >&2
+exit 1
+;;
+esac
+exit 0
+
+
+
