@@ -10,8 +10,8 @@
 <h1>Documentation Module LCS PMA</h1>
 <h2>Versions :</h2>
 <ul>
-    <li>Paquet module : 2.1~6 </li>
-    <li>PhpMyAdmin : 3.1.2 </li>
+    <li>Paquet module : 2.1-2~1 </li>
+    <li>PhpMyAdmin : 3.1.4 </li>
     <li>Site officiel de  PhpMyAdmin : <a href="http://www.phpmyadmin.net/">http://www.phpmyadmin.net/</a></li>
 </ul>
     
